# rudo

./: .gitignore  Cargo.toml  README.md  clippy.toml  rust-rudo.spec  rustfmt.toml
.github/workflows/: ci-analyze.yml  ci.yml  codecov.yml  rust.yml  security-audit.yml
conf/: rudo.conf
docs/: _config.yml  index.html  style.css
man/: rudo.1  rudo.conf.5  rudo.conf.md  rudo.md
src/: auth.rs  cli.rs  cmd.rs  command.rs  config.rs  journal.rs  lib.rs  main.rs  pwd.rs  run.rs  session.rs  token.rs  tty.rs  user.rs  utils.rs
