[package]
name = "rudo"
version = "0.6.4"
edition = "2018"
license = "GPL-2.0-or-later"
authors = ["Rémi Lauzier <remilauzier@protonmail.com>"]
repository = "https://github.com/remilauzier/rudo.git"
homepage = "https://github.com/remilauzier/rudo.git"
description = "A utility to gain privilege access on Unix system with Pam"
readme = "README.md"
keywords = ["cli", "sudo", "auth"]
categories = ["authentication", "command-line-utilities"]
include = ["src/", "conf/", "man/", "LICENSE", "README.md", "Cargo.toml", "Cargo.lock"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
libc = "0.2"
clap = "2.33"
users = "0.11"
pam-client = "0.2"
log = "0.4"
systemd = "0.8"
