[package]
name = "rudo"
version = "0.8.8"
edition = "2018"
license = "GPL-2.0-or-later"
authors = ["Rémi Lauzier <remilauzier@protonmail.com>"]
repository = "https://github.com/remilauzier/rudo.git"
homepage = "https://remilauzier.github.io/rudo/"
description = "A utility to gain privilege access on Unix system with Pam"
readme = "README.md"
keywords = ["cli", "sudo", "auth"]
categories = ["authentication", "command-line-utilities"]
include = ["src/", "conf/", "man/", "LICENSE", "README.md", "Cargo.toml", "Cargo.lock"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "^0.8.4"
libc = "0.2"
clap = "2.33"
log = "0.4"

[target.'cfg(unix)'.dependencies]
users = "0.11"
pam-client = "0.3"

[target.'cfg(target_os = "linux")'.dependencies]
systemd = { version = "0.9", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
oslog = { version = "0.1", optional = true }

[features]
default = ["journald"]
journald = ["systemd"]
macos = ["oslog"]

[profile.dev]
lto = true

[profile.release]
lto = true

[profile.test]
lto = true
